--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -194,9 +194,46 @@ h3 {
 }
 
 .goal {
-  border-style: solid;
-  border-width: 2px;
-  align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   text-align: center;
-  padding: 5px;
+  background-color: lightblue;
+  border-radius: 20px;
+  padding: 1rem;
+  padding-top: 20px;
+  min-height: 150px;
+  margin: 10px;
+
+}
+
+.close {
+  text-align: center;
+  background: #000;
+  color: #fff;
+  width: 100px;
+  border-radius: 10px;
+}
+
+.dark-mode {
+  background-color: rgb(9, 41, 112); 
+}
+
+.dark-mode h1 {
+  color: white;
+}
+
+.container {
+  width: 100vw;
+	margin-right: auto;
+	margin-left: auto;
+	padding-right: 15px;
+	padding-left: 15px;
+	height: 600px;
+}
+
+.toggle {
+  padding: 10px 20px;
+  font-size: 20px;
+  font-weight: 700;
 }
